dnl $Id$

dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(meta-errors, 0.1)

ACLOCAL="${ACLOCAL} -I ."

dnl {{{  Which compiler to use?
AC_PROG_CC

dnl }}}
dnl {{{  Handle --with-cflags option
AC_ARG_WITH(cflags,
   [  --with-cflags=CFLAGS    standard options of c compiler],
   CFLAGS=${withval},
   if test "a${GCC}" = "ayes"; then
     CFLAGS="-Wall -g -O2"
   fi;
)
AC_SUBST(CFLAGS)

dnl }}}

dnl {{{  Require ATerm library
AC_PACKAGE_REQUIRE(aterm, baffle,
   [  --with-aterm=DIR        ATerm-library is in DIR])
AC_SUBST(ATERM)

dnl }}}

dnl {{{  Our own version of libdir whose value is set dynamically
AC_SUBST(INSTLIBDIR)
INSTLIBDIR="$libdir"

dnl }}}
dnl {{{  What commands are needed to set the variable MAKE in Makefiles?
AC_SET_MAKE

dnl }}}

dnl {{{  Which files need updating?
AC_OUTPUT(
  Makefile
  lib/Makefile
)

dnl }}}
